@@ -2,8 +2,9 @@ shorewall6 (4.5.1.1-1) unstable; urgency=low
 
   * New Upstream Version
   * Add Turkish debconf translation, thanks to Atila KOÇ (Closes: #663178)
+  * Convert to debhelper compatibility level 8
 
- -- Roberto C. Sanchez <roberto@connexer.com>  Sat, 07 Apr 2012 09:39:25 -0400
+ -- Roberto C. Sanchez <roberto@connexer.com>  Sat, 07 Apr 2012 09:42:25 -0400
 
 shorewall6 (4.5.0.3-1) unstable; urgency=low
 
